--- a/package.json
+++ b/package.json
@@ -3,20 +3,21 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "nodemon ./bin/www"
+    "start": "nodemon app.js"
   },
   "dependencies": {
     "connect-redis": "^6.0.0",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "ejs": "~2.6.1",
-    "express": "~4.16.1",
+    "express": "^4.15.2",
     "express-session": "^1.17.2",
     "formidable": "^2.0.1",
     "http-errors": "~1.6.3",
     "moment": "^2.29.1",
     "morgan": "~1.9.1",
     "mysql2": "^2.3.3",
-    "redis": "^3.1.2"
+    "redis": "^3.1.2",
+    "socket.io": "^4.4.1"
   }
 }
